fixing the skills wrapping bug

--- a/components/_responsive.scss
+++ b/components/_responsive.scss
@@ -15,9 +15,6 @@
     justify-self: center;
     margin-bottom: 4rem;
   }
-  .skills__list {
-    grid-template-columns: repeat(2, 1fr);
-  }
   .project__data {
     flex-direction: column;
     align-items: center;
