--- a/styles/style.css
+++ b/styles/style.css
@@ -592,9 +592,6 @@ html:has(.toggle__checkbox:checked) {
     justify-self: center;
     margin-bottom: 4rem;
   }
-  .skills__list {
-    grid-template-columns: repeat(2, 1fr);
-  }
   .project__data {
     flex-direction: column;
     align-items: center;
